<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicapp.Settings">

    <ImageView
        android:id="@+id/settings_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/setting1" />

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/settings_activity"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/setting1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_text"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_1"
            android:textSize="25sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting1"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_2"
            android:textSize="25sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting2"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_3"
            android:textSize="25sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting3"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_4"
            android:textSize="25sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting4"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_5"
            android:textSize="25sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/play_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:adjustViewBounds="true"
        android:src="@drawable/play_button" />

</RelativeLayout>
